# studyvis

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  BUILD-PROMPTS.md  CHANGELOG.md  CLAUDE.md  DESIGN-SYSTEM.md  IMPROVEMENTS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ai-dialog.html  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  claude-pr-review.yml  release-prep.yml  release.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts  preview.tsx
assets/sounds/: peer_alert.opus  pomodoro_chime.opus
scripts/: build-llama-server.sh  changelog-section.sh  check-contrast.ts  check-relays.ts  check-strings.ts  check-tokens.ts  check-version-lockstep.sh  fetch-llama-server.sh  generate-benchmark-image.ts  generate-icons.mjs
src/: App.tsx  main.tsx  strings.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: ai-dialog.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  window_layout.rs
src-tauri/src/commands/: ai_dialog.rs  friends.rs  identity.rs  mod.rs  models.rs  sessions.rs  sidecar.rs  system.rs
src-tauri/src/db/: audit_events.rs  friends.rs  migrations.rs  mod.rs  sessions.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_v2.sql  003_sample_counts.sql
src-tauri/tests/: box_decrypt_vector.rs  friends_roundtrip.rs
src/components/: AiResponseBubble.tsx  AiStatusChip.tsx  AiTextBox.tsx  AudioDevicePicker.tsx  AudioOutputPicker.tsx  AuditLogPanel.tsx  AuditLogRow.tsx  BipBackupPanel.tsx  BreakCountdownBadge.tsx  Disclosure.tsx  ErrorBoundary.tsx  FocusIndicator.tsx  KeybindCapture.tsx  Logo.tsx  MediaErrorBanner.tsx  OnboardingStep.tsx  PairQrCode.tsx  PairQrScanner.tsx  PttIndicator.tsx  RelayDiagnostics.tsx  ScoreGauge.tsx  ScreenCapturePermissionOverlay.tsx  SelfWarningBadge.tsx  SessionEndedSplash.tsx  SessionTimer.tsx  SettingsLayout.tsx  SettingsRow.tsx  TitleBar.tsx  UpdateReadyBanner.tsx  VideoGrid.tsx  VideoTile.tsx  WaitingTile.tsx
src/design/: index.css  reduce-motion.ts  theme-context.ts  theme.tsx  tokens.ts
src/lib/: audit-icons.ts  audit-types.ts  encoding.ts  fileExport.ts  keybindings-copy.ts  keybindings.ts  media.ts  mediaError.ts  pomodoro-types.ts  relayDiagnostics.ts  turnProbe.ts  utils.ts  version.ts  windowChrome.ts
src/routes/: Home.tsx  StyleGuide.tsx
src/stores/: auditStore.ts  friendsStore.ts  identityStore.ts  pomodoroStore.ts  pttStore.ts  sessionStore.ts  settingsStore.ts
src/stories/: AddFriendDialog.stories.tsx  AiCaptureDisplaysControl.stories.tsx  AiDialogWindow.stories.tsx  AiResponseBubble.stories.tsx  AiStatusChip.stories.tsx  AiTextBox.stories.tsx  AudioDevicePicker.stories.tsx  AudioOutputPicker.stories.tsx  AuditLogPanel.stories.tsx  AuditLogRow.stories.tsx  Avatar.stories.tsx  Badge.stories.tsx  BipBackupPanel.stories.tsx  BreakCountdownBadge.stories.tsx  Button.stories.tsx  Card.stories.tsx  Checkbox.stories.tsx  ContactImport.stories.tsx  Dashboard.stories.tsx  Dialog.stories.tsx  Disclosure.stories.tsx  DropdownMenu.stories.tsx  ErrorBoundary.stories.tsx  FocusIndicator.stories.tsx  FocusInsights.stories.tsx  FriendsList.stories.tsx  IdentityChoiceStep.stories.tsx  IdentityLoadError.stories.tsx  IdentitySetup.stories.tsx  Input.stories.tsx  Kbd.stories.tsx  KeybindCapture.stories.tsx  Label.stories.tsx  Logo.stories.tsx  MediaErrorBanner.stories.tsx  ModelPicker.stories.tsx  Onboarding.stories.tsx  OnboardingStep.stories.tsx  PendingInvites.stories.tsx  Popover.stories.tsx  (+30 more)
src/types/: global.d.ts
tests/ai-eval/: README.md  RESULTS.md  evalCore.ts  run.ts
tests/integration/: ai-alert-roundtrip.test.ts  autostart-roundtrip.test.ts  invite.test.ts  pair-sink.test.ts  pair.test.ts  pomodoro.test.ts  session.test.ts
(+260 files in other folders)
