[package]
name = "studyvis"
version = "0.1.0"
description = "Peer-to-peer study app for friends"
authors = ["StudyVis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "studyvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
ed25519-dalek = "2"
hex = "0.4"
base64 = "0.22"
crypto_box = { version = "0.9", features = ["salsa20"] }
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }
