[package]
name = "studyvis"
version = "1.2.1"
description = "Peer-to-peer study app for friends"
authors = ["StudyVis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "studyvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
ed25519-dalek = "2"
hex = "0.4"
base64 = "0.22"
crypto_box = { version = "0.9", features = ["salsa20", "seal"] }
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
battery = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }
# V2-P7 — AI dialog window needs NSWindowCollectionBehavior canJoinAllSpaces
# | fullScreenAuxiliary so the floating Ctrl+] dialog appears OVER macOS
# fullscreen apps. Tauri's WebviewWindowBuilder doesn't expose the
# collection-behavior bits, so we drop into AppKit. `objc2` matches the
# pattern Tauri 2 uses internally (`ns_window()` returns a raw pointer
# we cast back into `objc2_app_kit::NSWindow`).
objc2 = "0.6"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }
